client data actions created, state management to be fixed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Panteon Games Stats",
+  "name": "Panteon Games Player Stats",
   "icons": [
     {
       "src": "favicon.ico",
