--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.3",
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.16.0",
     "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-react-animation": "^4.11.0",
+    "@progress/kendo-react-data-tools": "^4.11.0",
     "@progress/kendo-react-dateinputs": "^4.11.0",
+    "@progress/kendo-react-dropdowns": "^4.11.0",
     "@progress/kendo-react-grid": "^4.11.0",
+    "@progress/kendo-react-inputs": "^4.11.0",
     "@progress/kendo-react-intl": "^4.11.0",
     "@progress/kendo-theme-default": "^4.42.0",
     "@testing-library/jest-dom": "^5.11.4",
