--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.13.1"
+  },
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.3",
